--- a/calendar.html
+++ b/calendar.html
@@ -1,58 +1,58 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
-  <meta charset="UTF‑8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Calendar – Khotwa</title>
   <link rel="stylesheet" href="styles.css"/>
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
   <style>
-    .calendar-wrapper {
-      max-width: 1000px; margin: 2rem auto;
-      background: var(--card-bg); padding: 1.5rem;
-      border-radius: 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.1);
-    }
+    .calendar-section { max-width:800px; margin:2rem auto; padding:1rem; }
+    .calendar-card { background:var(--card-bg); padding:1.5rem; border-radius:8px; margin-bottom:1rem; box-shadow:0 2px 8px rgba(0,0,0,0.1);}
+    .calendar-card h3 { margin-bottom:0.5rem;}
   </style>
 </head>
 <body>
-<header class="navbar" data-aos="fade-down">
-  <div class="logo">KHOTWA COUNCIL</div>
-  <nav class="nav-container">
+
+<header class="navbar">
+  <div class="logo">KHOTWA</div>
+  <button class="hamburger" id="hamburgerBtn">☰</button>
+  <nav class="nav-container" id="navMenu">
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="calendar.html" class="active">Calendar</a></li>
       <li><a href="register.html">Register</a></li>
       <li><a href="admin.html">Admin</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="profile.html">Profile</a></li>
     </ul>
     <ul class="nav-links" id="authLinks"></ul>
     <button id="darkToggle" class="dark-btn">🌓</button>
   </nav>
 </header>
 
-<section class="calendar-wrapper" data-aos="fade-up">
-  <div id="calendar"></div>
+<section class="section calendar-section" data-aos="fade-up">
+  <h2>📅 Upcoming Calendar Events</h2>
+  <div class="calendar-card" data-aos="fade-up" data-aos-delay="100">
+    <h3>Orientation Week</h3>
+    <p>Date: 2025-09-01</p>
+    <p>Welcome session for new students.</p>
+  </div>
+  <div class="calendar-card" data-aos="fade-up" data-aos-delay="200">
+    <h3>Tech Talk</h3>
+    <p>Date: 2025-10-05</p>
+    <p>Discussion on AI, Web & Innovation.</p>
+  </div>
 </section>
 
 <footer class="footer"><p>© 2025 Khotwa Student Council</p></footer>
 
-<script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.js"></script>
-<script src="main.js"></script>
-<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js" defer></script>
+<script src="main.js" defer></script>
 <script>
-  AOS.init({ duration:800, once:true });
-  document.addEventListener('DOMContentLoaded', () => {
-    const events = JSON.parse(localStorage.getItem('events') || '[]');
-    const calendar = new FullCalendar.Calendar(document.getElementById('calendar'), {
-      initialView: 'dayGridMonth',
-      events,
-      dateClick: info => {
-        const ev = events.find(e => e.date === info.dateStr);
-        if (ev) alert(`Event: ${ev.title}`);
-      }
-    });
-    calendar.render();
-  });
+window.addEventListener("DOMContentLoaded", () => {
+  AOS.init({ duration: 800, once: true });
+  const hamburger = document.getElementById('hamburgerBtn');
+  const navMenu = document.getElementById('navMenu');
+  hamburger?.addEventListener('click', () => navMenu.classList.toggle('nav-open'));
+});
 </script>
 </body>
 </html>
