--- a/index.html
+++ b/index.html
@@ -91,18 +91,13 @@ window.addEventListener("DOMContentLoaded", () => {
     document.getElementById('mainNavbar').classList.toggle('navbar-scrolled', window.scrollY > 50);
   });
 
-  const members = JSON.parse(localStorage.getItem('registrations') || '[]').length;
-  const events = JSON.parse(localStorage.getItem('events') || '[]').length;
-  const messages = JSON.parse(localStorage.getItem('contacts') || '[]').length;
-  document.getElementById('countMembers').textContent = members;
-  document.getElementById('countEvents').textContent = events;
-  document.getElementById('countMessages').textContent = messages;
+  document.getElementById('countMembers').textContent = JSON.parse(localStorage.getItem('registrations') || '[]').length;
+  document.getElementById('countEvents').textContent = JSON.parse(localStorage.getItem('events') || '[]').length;
+  document.getElementById('countMessages').textContent = JSON.parse(localStorage.getItem('contacts') || '[]').length;
 
   const hamburger = document.getElementById('hamburgerBtn');
   const navMenu = document.getElementById('navMenu');
-  hamburger.addEventListener('click', () => {
-    navMenu.classList.toggle('nav-open');
-  });
+  hamburger.addEventListener('click', () => navMenu.classList.toggle('nav-open'));
 });
 </script>
 </body>
