--- a/admin.html
+++ b/admin.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 <script>
-  if (!localStorage.getItem("isLogged") && !localStorage.getItem("rememberMe")) {
+  const isLogged =
+    sessionStorage.getItem("isLogged") === "true" ||
+    localStorage.getItem("isLogged") === "true";
+  if (!isLogged) {
     alert("You must log in first!");
     location.href = "login.html";
   }
@@ -24,8 +27,7 @@
       <li><a href="calendar.html">Calendar</a></li>
       <li><a href="register.html">Register</a></li>
       <li><a href="admin.html" class="active">Admin</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="profile.html">Profile</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
     <ul class="nav-links" id="authLinks"></ul>
     <button id="darkToggle" class="dark-btn">🌓</button>
