--- a/login.html
+++ b/login.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login – Khotwa</title>
   <link rel="stylesheet" href="styles.css"/>
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
 </head>
 <body>
 
-<header class="navbar">
+<header class="navbar" id="mainNavbar">
   <div class="logo">KHOTWA</div>
   <button class="hamburger" id="hamburgerBtn">☰</button>
   <nav class="nav-container" id="navMenu">
@@ -36,12 +37,11 @@
 
 <footer class="footer"><p>© 2025 Khotwa Student Council</p></footer>
 
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js" defer></script>
 <script src="main.js" defer></script>
 <script>
 window.addEventListener("DOMContentLoaded", () => {
   const form = document.getElementById("loginForm");
-  const hamburger = document.getElementById('hamburgerBtn');
-  const navMenu = document.getElementById('navMenu');
 
   form.addEventListener("submit", e => {
     e.preventDefault();
@@ -57,8 +57,6 @@ window.addEventListener("DOMContentLoaded", () => {
       alert("Invalid credentials");
     }
   });
-
-  hamburger?.addEventListener('click', () => navMenu.classList.toggle('nav-open'));
 });
 </script>
 </body>
