--- a/register.html
+++ b/register.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Register – Khotwa</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
-<header class="navbar">
+<header class="navbar" id="mainNavbar">
   <div class="logo">KHOTWA COUNCIL</div>
   <button class="hamburger" id="hamburgerBtn">☰</button>
   <nav class="nav-container" id="navMenu">
@@ -61,6 +62,7 @@
   <p>© 2025 Khotwa Student Council</p>
 </footer>
 
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js" defer></script>
 <script src="main.js" defer></script>
 <script>
 document.addEventListener("DOMContentLoaded", () => {
@@ -87,12 +89,6 @@ document.addEventListener("DOMContentLoaded", () => {
     setTimeout(() => toast.classList.remove("show"), 3000);
   });
 
-  // Navbar hamburger
-  const hamburger = document.getElementById('hamburgerBtn');
-  const navMenu = document.getElementById('navMenu');
-  hamburger?.addEventListener('click', () => {
-    navMenu.classList.toggle('nav-open');
-  });
 });
 </script>
 </body>
