--- a/index.html
+++ b/index.html
@@ -3,82 +3,99 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Khotwa Student Council</title>
+  <title>Khotwa Council</title>
   <link rel="stylesheet" href="styles.css"/>
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
 </head>
 <body>
+  <header class="navbar" id="mainNavbar">
+    <div class="logo">KHOTWA COUNCIL</div>
+    <button class="hamburger" id="hamburgerBtn">☰</button>
+    <nav class="nav-container" id="navMenu">
+      <ul class="nav-links">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="calendar.html">Calendar</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <ul class="nav-links" id="authLinks"></ul>
+      <button id="darkToggle" class="dark-btn">🌓</button>
+    </nav>
+  </header>
 
-<header class="navbar" id="mainNavbar">
-  <div class="logo">KHOTWA COUNCIL</div>
-  <button class="hamburger" id="hamburgerBtn">☰</button>
-  <nav class="nav-container" id="navMenu">
-    <ul class="nav-links">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="calendar.html">Calendar</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="admin.html">Admin</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="profile.html">Profile</a></li>
+  <!-- Hero -->
+  <section id="home" class="hero" data-aos="fade-up">
+    <div class="hero-content">
+      <h1>Empower • Represent • Connect</h1>
+      <p>Your voice matters. Together we shape change.</p>
+      <a href="#services" class="primary-btn">Learn More</a>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section id="about" class="section about-section" data-aos="fade-right">
+    <div class="about-text">
+      <h2>Who Are We?</h2>
+      <p>Khotwa bridges students and leadership. We strive to empower representation and connect ideas across campus.</p>
+    </div>
+    <div class="about-image">
+      <img src="https://i.top4top.io/p_3497a12jc1.jpg" alt="Team Photo" loading="lazy"/>
+    </div>
+  </section>
+
+  <!-- Services -->
+  <section id="services" class="section services-grid" data-aos="fade-up">
+    <h2>What We Do</h2>
+    <div class="services-cards">
+      <div class="service-card" data-aos="zoom-in" data-aos-delay="100">
+        <h3>Register</h3>
+        <p>Join the council and participate in shaping student life.</p>
+      </div>
+      <div class="service-card" data-aos="zoom-in" data-aos-delay="200">
+        <h3>Events</h3>
+        <p>Attend, suggest, or co-host events with us across diverse interests.</p>
+      </div>
+      <div class="service-card" data-aos="zoom-in" data-aos-delay="300">
+        <h3>Support</h3>
+        <p>Get help, share feedback, or connect with council members.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Stats -->
+  <section class="section stats" data-aos="zoom-in">
+    <h2>Our Impact</h2>
+    <div class="stats-grid">
+      <div class="stat-card"><h3 id="countMembers">0</h3><p>Members</p></div>
+      <div class="stat-card"><h3 id="countEvents">0</h3><p>Events</p></div>
+      <div class="stat-card"><h3 id="countMessages">0</h3><p>Messages</p></div>
+    </div>
+  </section>
+
+  <!-- Events Preview -->
+  <section id="events" class="section" data-aos="fade-up">
+    <h2>Upcoming Events</h2>
+    <ul class="event-cards">
+      <li class="card-event" data-aos="fade-up" data-aos-delay="100">
+        <img src="images/event1.jpg" alt="Orientation Week"/>
+        <h3>Orientation Week</h3>
+        <p>Welcome new students with orientation activities.</p>
+      </li>
+      <li class="card-event" data-aos="fade-up" data-aos-delay="200">
+        <img src="images/event2.jpg" alt="Tech Talk"/>
+        <h3>Tech Talk</h3>
+        <p>AI, Web and Innovation session for learners.</p>
+      </li>
     </ul>
-    <ul class="nav-links" id="authLinks"></ul>
-    <button id="darkToggle" class="dark-btn">🌓</button>
-  </nav>
-</header>
+  </section>
 
-<section id="home" class="hero" data-aos="fade-up">
-  <div class="hero-content">
-    <h1>Welcome to <span class="text-green">Khotwa</span></h1>
-    <p>Empowering <strong>student voice</strong>. Leading with impact.</p>
-    <a href="#about" class="primary-btn" id="ctaBtn">Explore Khotwa</a>
-  </div>
-</section>
+  <!-- Footer -->
+  <footer class="footer" data-aos="fade-up">
+    <p>© 2025 Khotwa Student Council. All rights reserved.</p>
+  </footer>
 
-<section id="about" class="section about-section" data-aos="fade-right">
-  <div class="about-text">
-    <h2>Who Are We?</h2>
-    <p>Khotwa bridges students and leadership. We empower, represent, connect.</p>
-  </div>
-  <div class="about-image">
-    <img src="https://i.top4top.io/p_3497a12jc1.jpg" alt="Team Photo" loading="lazy"/>
-  </div>
-</section>
-
-<section class="section stats" data-aos="zoom-in">
-  <h2>Our Impact</h2>
-  <div class="stats-grid">
-    <div class="stat-card"><h3 id="countMembers">0</h3><p>Members</p></div>
-    <div class="stat-card"><h3 id="countEvents">0</h3><p>Events</p></div>
-    <div class="stat-card"><h3 id="countMessages">0</h3><p>Messages</p></div>
-  </div>
-</section>
-
-<section id="events" class="section" data-aos="fade-up">
-  <h2>Upcoming Events</h2>
-  <ul class="event-cards">
-    <li class="card-event" data-aos="fade-up" data-aos-delay="100">
-      <img src="images/event1.jpg" alt="Orientation" loading="lazy"/>
-      <h3>Orientation Week</h3>
-      <p>Welcome new students to the journey.</p>
-    </li>
-    <li class="card-event" data-aos="fade-up" data-aos-delay="200">
-      <img src="images/event2.jpg" alt="Tech Talk" loading="lazy"/>
-      <h3>Tech Talk</h3>
-      <p>AI, Web & Innovation session.</p>
-    </li>
-  </ul>
-</section>
-
-<section id="contact" class="section" data-aos="fade-up">
-  <h2>Contact Us</h2>
-  <a href="contact.html" class="primary-btn">Get In Touch</a>
-</section>
-
-<footer class="footer" data-aos="fade-up">
-  <p>© 2025 Khotwa Student Council. All rights reserved.</p>
-</footer>
-
-<script src="https://unpkg.com/aos@2.3.4/dist/aos.js" defer></script>
-<script src="main.js" defer></script>
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js" defer></script>
+  <script src="main.js" defer></script>
 </body>
 </html>
